% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/copula/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{copula}}% MM: look into ../svn-log-from.all
\newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\section{Changes in version 1.0-2 (2021-02-10, svn r....)}{
  \subsection{New Features}{
    \itemize{
      \item \code{fitCopula(<mixCopula>)} now by default uses
      \code{estimate.variance = TRUE} also with \emph{free} mixture
      weights.

      \item \code{fitLambda()} gets new method \code{"Schmidt.Stadtmueller"}.
    }
  }
}

\section{Changes in version 1.0-1 (2020-12-07, svn r1850)}{
  \subsection{New Features}{
    \itemize{
      \item The \code{pCopula()} methods for normal- and t-copulas now
      allow to pass \code{algorithm = .} to pkg \CRANpkg{mvtnorm}'s
      functions.  For lower dimensions, notably dimension
      \eqn{d \le 3}{d <= 3}, the default is now to typically use a
      \emph{non}-random algorithm.

      Such a default algorithm is also used in the (internal) derivative
      for normal- and t-copulas, (\code{dCdu()} calling \code{dCduEllipCopula()}).

      \item invisible improvement in internal \code{Jscore()}
      for internal \code{var.mpl()} computations.

      \item For \code{mixCopula}s, the default \code{optimMethod()} for
      \code{fitCopula()} is now \code{"L-BFGS-B"}.

      \item When \code{fitCopula(*, estimate.variance=TRUE)} fails during
      \code{optim(*, hessian=TRUE)}, a \code{warning()} is signalled, and
      kept as attribute of the \code{NA}-valued vcov matrix.

      Similarly when the hessian inversion fails, the warning message is
      now returned with the \code{NA}-valued vcov matrix.

      \item Smoothed \code{empCopula()} objects now have the right
      sampling methods.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{fitCopula(*, estimate.variance=FALSE)} now returns a