@@ -3,7 +3,7 @@
 \alias{setTheta}
 \alias{setTheta,acopula,ANY-method}
 \alias{setTheta,copula,ANY-method}
-\alias{setTheta,xcopula,ANY-method}
+\alias{setTheta,Xcopula,ANY-method}
 \alias{setTheta,outer_nacopula,numeric-method}
 \alias{setTheta,ellipCopula,ANY-method}
 \alias{setTheta,khoudrajiCopula,ANY-method}
@@ -22,7 +22,7 @@ setTheta(x, value, na.ok = TRUE, noCheck = FALSE, freeOnly = TRUE, \dots)
 
 \S4method{setTheta}{acopula,ANY}(x, value, na.ok = TRUE, noCheck = FALSE, freeOnly = TRUE, \dots)
 \S4method{setTheta}{copula,ANY}(x, value, na.ok = TRUE, noCheck = FALSE, freeOnly = TRUE, \dots)
-\S4method{setTheta}{xcopula,ANY}(x, value, na.ok = TRUE, noCheck = FALSE, freeOnly = TRUE, \dots)
+\S4method{setTheta}{Xcopula,ANY}(x, value, na.ok = TRUE, noCheck = FALSE, freeOnly = TRUE, \dots)
 \S4method{setTheta}{outer_nacopula,numeric}(x, value, na.ok = TRUE, noCheck = FALSE, freeOnly = TRUE, \dots)
 \S4method{setTheta}{khoudrajiCopula,ANY}(x, value, na.ok = TRUE, noCheck = FALSE, freeOnly = TRUE, \dots)
 
